<resources>
    <string name="app_name">LamodaCopy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalog">Каталог</string>
    <string name="home">Главная</string>
    <string name="bag">Корзина</string>
    <string name="elect">Избранное</string>
    <string name="enter">Войти</string>
    <string name="centerNotifications">Центр уведомлений</string>
    <string name="listenTv">Расскажем о новинках, персональных скидках и статусе ваших заказов.</string>
    <string name="Auth">Вход</string>
    <string name="Reg">Регистрация</string>
    <string name="tvAuth">Войдите, чтобы пользоваться персональной скидкой и спецпредложениями</string>
    <string name="etAuthHint">Телефон или почта</string>
    <string name="btnAuth">Войти</string>
    <string name="tvEnterCode">Войти по коду или через соцсети</string>
    <string name="btnCode">Получить код</string>
    <string name="tvEnterPassword">Войти по паролю или через соцсети</string>
    <string name="btnSertificate">Купить подарочный сертификат</string>
    <string name="btnGift">Управление подписками</string>
    <string name="btnCountry">Страна</string>
    <string name="btnDelivery">Доставка и примерка</string>
    <string name="btnHelpCenter">Центр поддержки</string>
    <string name="tvNonSerticate">Сертификатов пока нет</string>
    <string name="tvNonSerticate1">Добавьте подарочный сертификат или купите новый для себя и друзей.</string>
    <string name="btnAddSertificate1">Добавить</string>
    <string name="btnAddSertificate2">Купить</string>
    <string name="salesAndPromotions">Распродажи и акции</string>
    <string name="btnSubscribe">Подписаться</string>
    <string name="tvRussia">Россия</string>
    <string name="tvBelorussia">Беларусь</string>
    <string name="tvKazachstan">Казахстан</string>
    <string name="tvInfo">Данные доставки</string>
    <string name="btnCountryChoose">Ваш город: %s</string>
    <string name="tvChooseDelivery">Выберите способ доставки</string>
    <string name="tvPickup">Самовывоз</string>
    <string name="tvCourierDelivery">Курьерская доставка</string>
    <string name="tvPush">Через push-уведомления</string>
    <string name="tvFittingRoom">Вам нужна примерочная?</string>
    <string name="btnYesFittingRoom">Да, примерочная нужна</string>
    <string name="btnNoFittingRoom">Нет, я куплю весь заказ без примерки</string>
    <string name="tvWhereAreYou">Где вы находитесь?</string>
    <string name="nameOfCountry">Название населенного пункта</string>
    <string name="withFitting">С примеркой</string>
    <string name="payByCarta">Оплата картой</string>
    <string name="btnFittingRoomRecyclerView">Lamoda</string>
    <string name="tvCourierDeliveryandFittings">Курьерская доставка</string>
    <string name="tvTermsOfDelivery">Условия доставки</string>
    <string name="tvWithFit">С примеркой</string>
    <string name="tvRansom">0₽ при выкупе от 5500₽</string>
    <string name="tvOnlineBuy">0₽ при оплате онлайн</string>
    <string name="tv249Another">249₽ в остальных случаях</string>
    <string name="tvWithoutFit">Без примерки</string>
    <string name="tvIfYouKnow">Когда уверены, что заберете весь заказ</string>
    <string name="btnThanks">Понятно, спасибо</string>
    <string name="btnAskUsQuestion">Задайте нам вопрос</string>
    <string name="tvWriteUs">Напишите нам</string>
    <string name="tvWantToAskUs">Хотите задать вопрос?</string>
    <string name="tvUse">Воспользуйтесь формой обратной связи на сайте, или напишите нам в мессенджер</string>
    <string name="btnTelegram">Telegram</string>
    <string name="btnWhatsApp">WhatsApp</string>
    <string name="etName">Имя*</string>
    <string name="etEmail">Почта*</string>
    <string name="etNumber">Телефон*</string>
    <string name="tvSubscribeNews">Подписаться на новости и скидки</string>
    <string name="tvRegsAferta">Нажимая "Зарегистрироваться", я соглашаюсь с публичной афертой</string>
    <string name="btnReg">Зарегистрироваться</string>
    <string name="tvEnterCodeFromSms">Введите код из смс</string>
    <string name="btnEtCodeEnter">Отправить код</string>
    <string name="tvLamodaClub">Lamoda club</string>
    <string name="tvMySale">Моя скидка: %s </string>
    <string name="btnYourBuys">Ваши заказы</string>
    <string name="tvOrdersNo">Заказов пока нет</string>
    <string name="tvOrders">Заказывайте товары с примеркой курьером или в пункт самовывоза.</string>
    <string name="etBuysMainFragment">Товар, бренд или артикул</string>
    <string name="tvFemale">Женщинам</string>
    <string name="tvMale">Мужчинам</string>
    <string name="tvKids">Детям</string>
    <string name="tvAlls">все</string>
    <string name="tvPremiun">премиум</string>
    <string name="tvSport">спорт</string>
    <string name="tvBeuty">красота</string>
    <string name="tvHouse">дом</string>
    <string name="tvIdeas">идеи</string>
    <string name="tvAddToBag">Добавить в корзину</string>
    <string name="tvNoBuys">Товаров пока нет</string>
    <string name="tvForChooseLetsGoToCatalog">Для выбора вещей перейдите в каталог.</string>
    <string name="tvUseHeart">Используйте ♡</string>
    <string name="tvAddInElect">Добавьте товары в Избранное, чтобы купить их позже.</string>

</resources>