<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CoruierDeliveryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:id="@+id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/tvCourierDeliveryandFittings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCourierDeliveryandFittings"
            android:textColor="@color/black"
            android:textSize="27dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvCourierDeliveryandFittings"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/gray2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/tvTermsOfDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTermsOfDelivery"
            android:textColor="@color/black"
            android:textSize="27dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvWithFit"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTermsOfDelivery"
            android:textColor="@color/black"
            android:text="@string/tvWithFit"
            android:textSize="15sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvRansom"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvWithFit"
            android:textColor="@color/grey"
            android:text="@string/tvRansom"
            android:textSize="13sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvOnlineBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvRansom"
            android:textColor="@color/grey"
            android:text="@string/tvOnlineBuy"
            android:textSize="13sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv249Another"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvOnlineBuy"
            android:textColor="@color/grey"
            android:text="@string/tv249Another"
            android:textSize="13sp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/tvWithoutFit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvWithoutFit"
            android:textColor="@color/black"
            android:textSize="17dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvIfYouKnow"
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvWithoutFit"
            android:text="@string/tvIfYouKnow"
            android:textColor="@color/grey"
            android:textSize="13sp"
            tools:ignore="MissingConstraints" />
        <View
            android:layout_width="match_parent"
            android:layout_height="260dp"
            app:layout_constraintTop_toBottomOf="@id/tvWithoutFit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/view"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnThanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/blackbuttonwithradius"
            android:text="@string/btnThanks"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>