<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/materialtoolbar" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu="@menu/menu_toolbar">

            </com.google.android.material.appbar.MaterialToolbar>

            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>




    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/Auth"
                android:textAllCaps="false"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@id/button"
                app:layout_constraintStart_toStartOf="@id/button"
                app:layout_constraintEnd_toEndOf="@id/button" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:text="@string/Reg"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAuth"
                app:layout_constraintTop_toBottomOf="@+id/button"
                tools:ignore="MissingConstraints"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/etAuth"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAuth"
                tools:ignore="MissingConstraints"
                android:hint="@string/etAuthHint"/>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/etAuth"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnAuth"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:layout_margin="15dp"
                    android:textAllCaps="false"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tvEnterCode"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="#bbbbbb"
                    android:layout_marginTop="7dp" />

                <Button
                    android:id="@+id/btnSertificat1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnSertificate"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btnGift1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnGift"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_gravity="top"
                    android:id="@+id/btnCountry1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnCountry"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAllCaps="false"
                    android:drawableRight="@drawable/russia1"/>


                <Button
                    android:id="@+id/btnDelivery1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnDelivery"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btnHelpCenter1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnHelpCenter"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/etAuth"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCode"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:layout_margin="15dp"
                    android:textAllCaps="false"/>

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tvEnterPassword"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="#bbbbbb"
                    android:layout_marginTop="7dp" />

                <Button
                    android:id="@+id/btnSertificat2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnSertificate"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btnGift2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnGift"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btnCountry2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnCountry"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btnDelivery2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnDelivery"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btnHelpCenter2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_gradient"
                    android:text="@string/btnHelpCenter"
                    android:gravity="start|center"
                    android:paddingStart="10dp"
                    android:textAllCaps="false"/>




            </LinearLayout>







        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>