<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/materialtoolbar" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_toolbar">

            </com.google.android.material.appbar.MaterialToolbar>

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/Auth"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:text="@string/Reg"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:background="#000000"
            app:layout_constraintTop_toBottomOf="@id/button2"
            app:layout_constraintStart_toStartOf="@id/button2"
            app:layout_constraintEnd_toEndOf="@id/button2" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button"
            android:layout_marginStart="20dp"
            tools:ignore="MissingConstraints"
            android:hint="@string/etName"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"
            android:layout_marginStart="20dp"
            tools:ignore="MissingConstraints"
            android:hint="@string/etEmail"/>

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:layout_marginStart="20dp"
            tools:ignore="MissingConstraints"
            android:hint="@string/etNumber"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNumber"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvSubscribeToNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSubscribeNews"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/checkbox"
            app:layout_constraintEnd_toStartOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/etNumber"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubscribeToNews"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tvRegsAferta"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/tvRegsAferta"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRegsAferta"
                android:layout_margin="20dp"
                android:background="@drawable/blackbuttonwithradius"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:text="@string/btnReg" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>